1998-04-20  Laurent Pautet  <pautet@scapin.enst.fr>

	* configure, configure.in, Makefile.in: Add platform Open NT.

1998-04-20  Samuel Tardieu  <sam@inf.enst.fr>

	* MANIFEST: Reinstated Garlic/s-garthi.ads, and remove
	Garlic/5lgarthi.ads and Garlic/5wgarthi.ads. Add
	Garlic/5wgtplsp.adb.

	* configure.in: New variable TCP_PLATFORM_SOURCE which uses either 
	the source or the body of System.Garlic.Platform_Specific. Needed
	for the Windows NT port.

1998-04-19  Samuel Tardieu  <sam@inf.enst.fr>

	* configure.in: Add flag -gnatx2 when using the maintainer mode to 
	help cross-referencing.

1998-04-12  Samuel Tardieu  <sam@inf.enst.fr>

	* INSTALL: Fix typo.

1998-04-09  Samuel Tardieu  <sam@inf.enst.fr>

	* MANIFEST: Remove Garlic/s-garthi.ads, and add
	Garlic/5lgarthi.ads and Garlic/5wgarthi.ads.

1998-04-05  Samuel Tardieu  <sam@inf.enst.fr>

	* INSTALL: Add a note on LinuxThreads/FSU threads issue.

1998-03-24  Samuel Tardieu  <sam@inf.enst.fr>

	* configure.in: Change 2<letter>* into 5<letter>*.

	* MANIFEST: Likewise.

1998-03-23  Laurent Pautet  <pautet@scapin.enst.fr>

	* configure.in, configure: Add some platform configurations.

1998-02-19  Laurent Pautet  <pautet@scapin.enst.fr>

	* configure, configure.in: Remove substitution in
	gnatdist.in. gnatdist.in script is not used anymore.

	* MANIFEST: Remove gnatdist.in.

1998-02-18  Laurent Pautet  <pautet@scapin.enst.fr>

	* MANIFEST: Remove s-gafino.ad[bs]. No longer needed.

1998-02-18  Samuel Tardieu  <sam@inf.enst.fr>

	* configure.in: Do not test for Errno anymore since it is
	available in GNAT.OS_Lib.

1998-02-12  Samuel Tardieu  <sam@inf.enst.fr>

	* configure.in: Correct typo.

	* README: Add missing 's' to Ada Core Technologies.

1998-02-12  Laurent Guerby  <guerby@gnat.com>

	* MANIFEST: Replace Garlic/DOFF by Garlic/UNDALL.

	* configure.in: Remove -O0 for Digital Unix, no longer needed.

	* configure: Ditto.

	* MANIFEST: Add Garlic/DALL and Garlic/DOFF to the distribution.
